@@ -1,0 +1,34 @@
+/*
+ * Created on 25 May 2008
+ * Created by Allan Crooks
+ * Copyright (C) 2007 Aelitis, All Rights Reserved.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ * 
+ * AELITIS, SAS au capital de 46,603.30 euros
+ * 8 Allee Lenotre, La Grille Royale, 78600 Le Mesnil le Roi, France.
+ */
+package org.gudy.azureus2.plugins.ui.config;
+
+/**
+ * This parameter represents a native UI object to be displayed in a configuration
+ * section.
+ *
+ * <p><b>Note:</b> Only for implementation by Azureus, not plugins.</p>
+ * 
+ * @author Allan Crooks
+ * @since 3.0.5.3
+ */
+public interface UIParameter extends Parameter {
+	public UIParameterContext getContext();
+}
